UUID implemented instead of generated sequence id.